[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3.2"
bincode = "1.3.3"
log = "0.4.0"
env_logger = "0.8.4"
parking_lot = "0.12"

[dev-dependencies]
quickcheck = "1"
rand = "0.8.5"

