[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3.2"
bincode = "1.3.3"
parking_lot = "0.12"
rand = "0.8.5"
threadpool = "1.8.1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
quickcheck = "1"
pretty_assertions = "1.2.1"

